# inspy_logger

./: .gitignore  conf.py  pyproject.toml
docs/source/: conf.py
inspy_logger/: __init__.py
