[tool.poetry]
name = "inspy_logger"
version = "2.0-a.1"
description = "Colorable, scalable logger for CLI"
authors = ["taylor <tayjaybabee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.2"
colorlog = "^4.2.1"
setuptools-autover = "^1.0.2"

[tool.poetry.dev-dependencies]
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
